kubernetes/audiobookshelf/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: audiobookshelf
  name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      serviceAccountName: audiobookshelf
      containers:
        - image: "ghcr.io/advplyr/audiobookshelf:2.16.2"
          imagePullPolicy: IfNotPresent
          name: audiobookshelf
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: metadata
              mountPath: /metadata
            - name: audiobooks
              mountPath: /audiobooks
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: "2"
              memory: "4Gi"
            limits:
              cpu: "4"
              memory: "8Gi"
      volumes:
        - name: metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata
        - name: audiobooks
          persistentVolumeClaim:
            claimName: audiobookshelf-audiobooks
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
