kubernetes/audiobookshelf/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
spec:
  type: ClusterIP
  selector:
    app: audiobookshelf
  ports:
    - name: http
      port: 80
