kubernetes/audiobookshelf/templates/ingress.yaml
# Using this together with nginx-ingress installed as described here - https://kubernetes.github.io/ingress-nginx/deploy/#generic-deployment

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: audiobookshelf-ingress
    annotations:
        kubernetes.io/tls-acme: 'true'
        ingress.kubernetes.io/ssl-redirect: "true"
        cert-manager.io/cluster-issuer: letsencrypt-prod
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/enable-modsecurity: "true"
        nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
        nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
spec:
  rules:
    - host: audiobooks.nathanrahm.com
      http:
        paths:
         - path: /
           pathType: ImplementationSpecific
           backend:
             service:
               name: audiobookshelf
               port:
                 name: http
  tls:
        - hosts:
              - audiobooks.nathanrahm.com
          secretName: audiobookshelf-tls
